--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">appcemex</string>
     <string name="title_activity_main">appcemex</string>
-    <string name="package_name">com.cemex.logistic.load.am.dev</string>
-    <string name="custom_url_scheme">com.cemex.logistic.load.am.dev</string>
+    <string name="package_name">com.cemex.logistic.load.am</string>
+    <string name="custom_url_scheme">com.cemex.logistic.load.am</string>
 </resources>
